peers: fix peers table scrolling on mobile

--- a/src/app/core/card/card.component.scss
+++ b/src/app/core/card/card.component.scss
@@ -1,8 +1,10 @@
 @import "vars";
 
 :host {
-  & > {
-    a, div {
+  &> {
+
+    a,
+    div {
       border: 0.1rem solid $c-card-secondary;
       background-color: $c-card;
       border-radius: 0.5rem;
@@ -28,7 +30,8 @@
         }
       }
 
-      &:not(.shadow), &.shadow div.container {
+      &:not(.shadow),
+      &.shadow div.container {
         padding: 1rem;
         display: flex;
         justify-items: center;
@@ -43,6 +46,7 @@
           display: flex;
           flex-direction: column;
           flex-grow: 1;
+          width: 100%;
         }
       }
     }
@@ -56,8 +60,10 @@
     }
   }
 
-  &.light-shadow > {
-    a, div {
+  &.light-shadow> {
+
+    a,
+    div {
       &.shadow div.container {
         background-color: rgba(0, 0, 0, 0.55);
       }
